@@ -9,6 +9,23 @@ higher or lower than their guess.
 
 import random
 
+def confirm_quit():
+    """
+    Asks the user to confirm if they want to quit the game.
+    
+    Returns:
+        bool: True if the user confirms quitting, False otherwise
+    """
+    while True:
+        confirm = input("Confirm quit? (y/n): ").lower()
+        if confirm in ['y', 'yes']:
+            print("\nThanks for playing shygyGames! Goodbye!")
+            return True
+        elif confirm in ['n', 'no']:
+            return False
+        else:
+            print("Please enter 'y' or 'n'.")
+
 def play_highOrLow():
     """
     Run the Higher or Lower game in interactive mode.
@@ -31,8 +48,16 @@ def play_highOrLow():
         # Get the first player guess with input validation
         while True:
             try:
-                userChoice = input("I'm thinking of a number between 1 and 10 inclusive. Make a guess: ")
-                userChoice = int(userChoice)
+                userInput = input("I'm thinking of a number between 1 and 10 inclusive. Make a guess: ")
+                
+                # Check if user wants to quit
+                if userInput.lower() in ['quit', 'q', 'exit']:
+                    if confirm_quit():
+                        return
+                    else:
+                        continue
+                        
+                userChoice = int(userInput)
                 if userChoice < 1 or userChoice > 10:
                     print("Please enter a number between 1 and 10.")
                     continue
@@ -50,8 +75,17 @@ def play_highOrLow():
             # Get subsequent guesses with input validation
             while True:
                 try:
-                    userChoice = input(hint)
-                    userChoice = int(userChoice)
+                    userInput = input(hint)
+                    
+                    # Check if user wants to quit
+                    if userInput.lower() in ['quit', 'q', 'exit']:
+                        if confirm_quit():
+                            return
+                        else:
+                            # Show the hint again to continue the game
+                            continue
+                    
+                    userChoice = int(userInput)
                     if userChoice < 1 or userChoice > 10:
                         print("Please enter a number between 1 and 10.")
                         continue
@@ -78,6 +112,11 @@ def play_highOrLow():
             play_again = input("Would you like to play again? (y/n): ").lower()
             if play_again in ['y', 'n', 'yes', 'no']:
                 break
+            elif play_again in ['quit', 'q', 'exit']:
+                if confirm_quit():
+                    return
+                else:
+                    continue
             else:
                 print("Invalid input. Please enter Y or N (case insensitive).")
         
