@@ -50,7 +50,7 @@ def display_header():
     print("\nGames include Higher or Lower, Rock Paper Scissors, Hangman, and Blackjack")
     print("with advanced betting options (split, double down, and insurance).")
     print("-" * 70)
-# Small delay for better user experience
+    # Small delay for better user experience
     time.sleep(0.5)
 
 def check_environment():
